Fixed slider overlapping product buttons

--- a/assets/scss/products/_product-view.scss
+++ b/assets/scss/products/_product-view.scss
@@ -39,6 +39,7 @@
   }
 
   #slider {
+    clear: right;
     margin-bottom: 1rem;
     position: relative;
 
